[gd_scene load_steps=2 format=3 uid="uid://b8qvwx7nrm8df"]

[ext_resource type="Script" path="res://scenes/title/title_table_dual_container.gd" id="1_dual"]

[node name="TableDualContainer" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dual")

[node name="ViewportContainer1" type="SubViewportContainer" parent="."]
layout_mode = 0
stretch = true

[node name="SubViewport1" type="SubViewport" parent="ViewportContainer1"]
handle_input_locally = false
size = Vector2i(1024, 576)
render_target_update_mode = 4

[node name="ViewportContainer2" type="SubViewportContainer" parent="."]
layout_mode = 0
stretch = true

[node name="SubViewport2" type="SubViewport" parent="ViewportContainer2"]
handle_input_locally = false
size = Vector2i(1024, 576)
render_target_update_mode = 4

